# hspiral

./: .ghci  .gitignore  LICENSE  Makefile  README.md  Spiral.hs  spl.cabal  stack.yaml
Data/: FlagSet.hs  Heterogeneous.hs
Data/Complex/: Cyclotomic.hs
Data/Modular/: Instances.hs
IHaskell/Display/: Spiral.hs
SPL/: Cg.hs  Exp.hs  ExtendedFloat.hs  FFT.hs  Lift.hs  Monad.hs  Pretty.hs  Syntax.hs  Uniq.hs
SPL/Backend/: C.hs
SPL/Backend/C/: CExp.hs  Code.hs  Util.hs
SPL/Cg/: Monad.hs
Spiral/: Array.hs  Cg.hs  Config.hs  Convolution.hs  Driver.hs  Exp.hs  ExtendedFloat.hs  FFT.hs  Globals.hs  Monad.hs  NumberTheory.hs  OpCount.hs  Permutation.hs  Program.hs  RootOfUnity.hs  SPL.hs  Search.hs  Shape.hs  Trace.hs
Spiral/Array/: Base.hs  Computable.hs  Mutable.hs  Program.hs  Shape.hs
Spiral/Array/Operators/: IndexSpace.hs  Mapping.hs  Matrix.hs  Permute.hs  Reduction.hs
Spiral/Array/Repr/: Complex.hs  Compute.hs  Concrete.hs  Hidden.hs  Slice.hs  Transform.hs  Virtual.hs
Spiral/Backend/: C.hs
Spiral/Backend/C/: Array.hs  Assign.hs  CExp.hs  Code.hs  Mapping.hs  Monad.hs  Reduction.hs  Slice.hs  Temp.hs  Types.hs  Util.hs  Virtual.hs
Spiral/Backend/C/Repr/: Cached.hs
Spiral/Cg/: Monad.hs
Spiral/Convolution/: AgarwalCooley.hs  ConvolutionTheorem.hs  Core.hs  SplitNesting.hs  Standard.hs  Tensor.hs  ToomCook.hs  Winograd.hs
Spiral/Driver/: Config.hs  Globals.hs  Monad.hs  Opts.hs
Spiral/FFT/: Bluestein.hs  CooleyTukey.hs  GoodThomas.hs  Rader.hs  Winograd.hs
Spiral/Program/: Monad.hs  Monad.hs-boot  Syntax.hs
Spiral/SPL/: Run.hs
Spiral/Search/: FFTBreakdowns.hs  Generic.hs  Monad.hs  OpCount.hs  SFKT.hs
Spiral/Util/: Lift.hs  MaplePretty.hs  Name.hs  Pretty.hs  Trace.hs  Uniq.hs
Spiral/Util/Pretty/: LaTeX.hs  Maple.hs
benchmark/: Makefile  README.md
benchmark/data/: opcount-3mult.csv  opcount.csv  search-opcount.csv
benchmark/hspiral/: fft1024.c  fft128.c  fft16.c  fft2.c  fft256.c  fft32.c  fft4.c  fft512.c  fft64.c  fft8.c  hspiral_fft.h
benchmark/spiral/: spiral_fft_double.c
benchmark/src/: main.c
examples/: DFTGen.hs  FFT.hs  Maple.hs  ModDFTGen.hs  OpCount.hs  OpCounts.hs  Search.hs  Voronenko.hs
mk/: common.mk  virtual.mk
src/: Test.hs
src/test/: Main.hs  Quick.hs
src/test/Test/: Codegen.hs  Convolution.hs  FFTW.hs  Factorization.hs  Gen.hs  Instances.hs  Opcount.hs  SPL.hs
