name:          spl
version:       0.1
cabal-version: >= 1.10
license:       BSD3
license-file:  LICENSE
copyright:     (c) 2016 Drexel University
author:        Geoffrey Mainland <mainland@drexel.edu>
maintainer:    Geoffrey Mainland <mainland@drexel.edu>
stability:     alpha
homepage:      https://lambda.cs.drexel.edu/gitlab/mainland/spl
category:      Language
synopsis:      SPL language.
tested-with:   GHC==7.10.3

description:
  A Haskell implementation of the SPL language.

build-type: Simple

library
  default-language: Haskell2010

  exposed-modules:
    Spiral
    Spiral.Array
    Spiral.Array.Base
    Spiral.Array.Shape
    Spiral.Backend.C
    Spiral.Backend.C.Array
    Spiral.Backend.C.Assign
    Spiral.Backend.C.CExp
    Spiral.Backend.C.Code
    Spiral.Backend.C.Mapping
    Spiral.Backend.C.Monad
    Spiral.Backend.C.Reduction
    Spiral.Backend.C.Slice
    Spiral.Backend.C.Types
    Spiral.Backend.C.Util
    Spiral.Backend.C.Virtual
    Spiral.Driver
    Spiral.Driver.Config
    Spiral.Exp
    Spiral.FFT
    Spiral.SPL

  other-modules:
    Spiral.Driver.Globals
    Spiral.Driver.Monad
    Spiral.Driver.Opts
    Spiral.Util.Pretty
    Spiral.Util.Trace
    Spiral.Util.Uniq

  build-depends:
    base                   >= 4        && < 5,
    bytestring             >= 0.9      && < 0.11,
    containers             >= 0.5      && < 0.6,
    exception-mtl          >= 0.3      && < 0.5,
    exception-transformers >= 0.3      && < 0.5,
    language-c-quote       >= 0.11.6   && < 0.12,
    mainland-pretty        >= 0.4.1.2  && < 0.5,
    mtl                    >= 2.0      && < 3,
    primitive              >= 0.6      && < 0.7,
    ref-fd                 >= 0.3      && < 0.5,
    srcloc                 >= 0.5      && < 0.6,
    text                   >= 1.1      && < 1.3,
    transformers           >= 0.2      && < 0.6,
    vector                 >= 0.11     && < 0.12,
    QuickCheck             >= 2.8      && < 2.9

  ghc-options:
    -Wall -fno-warn-name-shadowing

executable dftgen
  main-is: DFTGen.hs
  default-language: Haskell2010
  hs-source-dirs:
     examples

  build-depends:
    spl,
    base                   >= 4        && < 5,
    mainland-pretty        >= 0.4.1.2  && < 0.5

test-suite test
  type: exitcode-stdio-1.0
  main-is: Test.hs
  default-language: Haskell2010
  hs-source-dirs:
     src

  build-depends:
    spl,
    base                       >= 4   && < 5,
    test-framework             >= 0.8 && < 0.9,
    test-framework-hunit       >= 0.3 && < 0.4,
    test-framework-quickcheck2 >= 0.3 && < 0.4,
    HUnit                      >= 1.3 && < 1.4,
    QuickCheck                 >= 2.8 && < 2.9

source-repository head
  type:     git
  location: https://lambda.cs.drexel.edu/gitlab/mainland/spl.git
