name:          spl
version:       0.1
cabal-version: >= 1.10
license:       BSD3
license-file:  LICENSE
copyright:     (c) 2016 Drexel University
author:        Geoffrey Mainland <mainland@drexel.edu>
maintainer:    Geoffrey Mainland <mainland@drexel.edu>
stability:     alpha
homepage:      https://lambda.cs.drexel.edu/gitlab/mainland/spl
category:      Language
synopsis:      SPL language.
tested-with:   GHC==8.0.2

description:
  A Haskell implementation of the SPL language.

build-type: Simple

library
  default-language: Haskell2010

  exposed-modules:
    Spiral
    Spiral.Array
    Spiral.Array.Base
    Spiral.Array.Computable
    Spiral.Array.Mutable
    Spiral.Array.Operators.IndexSpace
    Spiral.Array.Operators.Mapping
    Spiral.Array.Operators.Permute
    Spiral.Array.Operators.Reduction
    Spiral.Array.Repr.Complex
    Spiral.Array.Repr.Compute
    Spiral.Array.Repr.Concrete
    Spiral.Array.Repr.Hidden
    Spiral.Array.Repr.Slice
    Spiral.Array.Repr.Transform
    Spiral.Array.Repr.Virtual
    Spiral.Array.Shape
    Spiral.Backend.C
    Spiral.Backend.C.CExp
    Spiral.Backend.C.Code
    Spiral.Backend.C.Monad
    Spiral.Backend.C.Util
    Spiral.Config
    Spiral.Exp
    Spiral.ExtendedFloat
    Spiral.FFT
    Spiral.FFT.CooleyTukey
    Spiral.FFT.GoodThomas
    Spiral.Globals
    Spiral.Monad
    Spiral.OpCount
    Spiral.Program
    Spiral.Program.Monad
    Spiral.Program.Syntax
    Spiral.SPL
    Spiral.SPL.Run

  other-modules:
    Data.Heterogeneous
    Spiral.Driver
    Spiral.Driver.Monad
    Spiral.Driver.Opts
    Spiral.Util.MaplePretty
    Spiral.Util.Name
    Spiral.Util.Pretty
    Spiral.Util.Trace
    Spiral.Util.Uniq

  build-depends:
    base                   >= 4        && < 5,
    bytestring             >= 0.9      && < 0.11,
    containers             >= 0.5      && < 0.6,
    exception-mtl          >= 0.3      && < 0.5,
    exception-transformers >= 0.3      && < 0.5,
    language-c-quote       >= 0.11.6   && < 0.12,
    mainland-pretty        >= 0.4.1.2  && < 0.5,
    mtl                    >= 2.0      && < 3,
    primitive              >= 0.6      && < 0.7,
    ref-fd                 >= 0.3      && < 0.5,
    srcloc                 >= 0.5      && < 0.6,
    symbol                 >= 0.2.4    && < 0.3,
    text                   >= 1.1      && < 1.3,
    transformers           >= 0.2      && < 0.6,
    vector                 >= 0.11     && < 0.12,
    QuickCheck             >= 2.8      && < 2.10

  ghc-options:
    -Wall -fno-warn-name-shadowing

executable dftgen
  main-is: DFTGen.hs
  default-language: Haskell2010
  hs-source-dirs:
    examples

  build-depends:
    spl,
    base                   >= 4        && < 5,
    mainland-pretty        >= 0.4.1.2  && < 0.5

executable voronenko
  main-is: Voronenko.hs
  default-language: Haskell2010
  hs-source-dirs:
    examples

  build-depends:
    spl,
    base                   >= 4        && < 5,
    mainland-pretty        >= 0.4.1.2  && < 0.5,
    transformers           >= 0.2      && < 0.6

test-suite test
  type: exitcode-stdio-1.0
  main-is: Main.hs
  default-language: Haskell2010
  hs-source-dirs:
    src/test

  other-modules:
    Test.FFTW
    Test.Gen

  build-depends:
    spl,
    base                       >= 4       && < 5,
    bytestring                 >= 0.9     && < 0.11,
    libltdl                    >= 0.1.1   && < 0.2,
    mainland-pretty            >= 0.4.1.2 && < 0.5,
    process                    >= 1.4     && < 1.5,
    test-framework             >= 0.8     && < 0.9,
    test-framework-hunit       >= 0.3     && < 0.4,
    test-framework-quickcheck2 >= 0.3     && < 0.4,
    text                       >= 1.1     && < 1.3,
    transformers               >= 0.2     && < 0.6,
    vector                     >= 0.11    && < 0.12,
    vector-fftw                >= 0.1     && < 0.2,
    HUnit                      >= 1.3     && < 1.6,
    QuickCheck                 >= 2.8     && < 2.10

source-repository head
  type:     git
  location: https://lambda.cs.drexel.edu/gitlab/mainland/spl.git
