name:          spl
version:       0.1
cabal-version: >= 1.10
license:       BSD3
license-file:  LICENSE
copyright:     (c) 2016-2020 Drexel University
author:        Geoffrey Mainland <mainland@drexel.edu>
maintainer:    Geoffrey Mainland <mainland@drexel.edu>
stability:     alpha
homepage:      https://lambda.cs.drexel.edu/gitlab/mainland/spl
category:      Language
synopsis:      SPL language.
tested-with:   GHC==8.6.5

description:
  A Haskell implementation of the SPL language.

build-type: Simple

library
  default-language: Haskell2010

  exposed-modules:
    Data.FlagSet
    Spiral
    Spiral.Array
    Spiral.Array.Base
    Spiral.Array.Computable
    Spiral.Array.Mutable
    Spiral.Array.Operators.IndexSpace
    Spiral.Array.Operators.Mapping
    Spiral.Array.Operators.Permute
    Spiral.Array.Operators.Reduction
    Spiral.Array.Repr.Complex
    Spiral.Array.Repr.Compute
    Spiral.Array.Repr.Concrete
    Spiral.Array.Repr.Hidden
    Spiral.Array.Repr.Slice
    Spiral.Array.Repr.Transform
    Spiral.Array.Repr.Virtual
    Spiral.Array.Shape
    Spiral.Backend.C
    Spiral.Backend.C.CExp
    Spiral.Backend.C.Code
    Spiral.Backend.C.Monad
    Spiral.Backend.C.Util
    Spiral.Config
    Spiral.Driver
    Spiral.Driver.Opts
    Spiral.Exp
    Spiral.FFT.Bluestein
    Spiral.FFT.CooleyTukey
    Spiral.FFT.GoodThomas
    Spiral.FFT.Rader
    Spiral.Globals
    Spiral.Monad
    Spiral.NumberTheory
    Spiral.OpCount
    Spiral.Permutation
    Spiral.Program
    Spiral.Program.Monad
    Spiral.Program.Syntax
    Spiral.RootOfUnity
    Spiral.SPL
    Spiral.SPL.Run
    Spiral.Search
    Spiral.Search.FFTBreakdowns
    Spiral.Search.Monad
    Spiral.Search.OpCount
    Spiral.Search.SFKT
    Spiral.Util.Pretty
    Spiral.Util.Pretty.Maple
    Spiral.Util.Uniq

  other-modules:
    Data.Heterogeneous
    Data.Modular.Instances
    Spiral.Driver.Monad
    Spiral.Util.Name
    Spiral.Util.Trace

  build-depends:
    arithmoi               >= 0.5   && < 0.11,
    base                   >= 4.9   && < 4.13,
    bytestring             >= 0.9   && < 0.11,
    containers             >= 0.5   && < 0.7,
    cyclotomic             >= 0.4   && < 1.1,
    exception-mtl          >= 0.3   && < 0.5,
    exception-transformers >= 0.3   && < 0.5,
    language-c-quote       >= 0.12.2 && < 0.13,
    logict                 >= 0.6   && < 0.8,
    mainland-pretty        >= 0.7   && < 0.8,
    modular-arithmetic     >= 1.2.1.2 && < 1.3,
    mtl                    >= 2.0   && < 3,
    primitive              >= 0.6   && < 0.8,
    random                 >= 1.1   && < 1.2,
    ref-fd                 >= 0.3   && < 0.5,
    srcloc                 >= 0.5   && < 0.6,
    symbol                 >= 0.2.4 && < 0.3,
    text                   >= 1.1   && < 1.3,
    transformers           >= 0.2   && < 0.6,
    vector                 >= 0.11  && < 0.13,
    QuickCheck             >= 2.8   && < 2.14

  ghc-options:
    -Wall -fno-warn-name-shadowing

  if impl(ghc >= 8.0)
    ghc-options: -Wcompat -Wnoncanonical-monad-instances -Wnoncanonical-monadfail-instances
  else
    -- provide/emulate `Control.Monad.Fail` and `Data.Semigroups` API for pre-GHC8
    build-depends: fail == 4.9.*, semigroups == 0.18.*

executable dftgen
  main-is: DFTGen.hs
  default-language: Haskell2010
  hs-source-dirs:
    examples

  build-depends:
    spl,
    base            >= 4.9 && < 4.13,
    mainland-pretty >= 0.7 && < 0.8

executable maple
  main-is: Maple.hs
  default-language: Haskell2010
  hs-source-dirs:
    examples

  build-depends:
    spl,
    base            >= 4.9 && < 4.13,
    mainland-pretty >= 0.7 && < 0.8

executable opcount
  main-is: OpCount.hs
  default-language: Haskell2010
  hs-source-dirs:
    examples

  build-depends:
    spl,
    base            >= 4.9 && < 4.13,
    containers      >= 0.5 && < 0.7,
    mainland-pretty >= 0.7 && < 0.8

executable opcounts
  main-is: OpCounts.hs
  default-language: Haskell2010
  hs-source-dirs:
    examples

  build-depends:
    spl,
    base            >= 4.9 && < 4.13,
    containers      >= 0.5 && < 0.7,
    mainland-pretty >= 0.7 && < 0.8

executable search
  main-is: Search.hs
  default-language: Haskell2010
  hs-source-dirs:
    examples

  build-depends:
    spl,
    base            >= 4.9 && < 4.13,
    containers      >= 0.5 && < 0.7,
    mainland-pretty >= 0.7 && < 0.8

executable voronenko
  main-is: Voronenko.hs
  default-language: Haskell2010
  hs-source-dirs:
    examples

  build-depends:
    spl,
    base            >= 4.9 && < 4.13,
    mainland-pretty >= 0.7 && < 0.8,
    transformers    >= 0.2 && < 0.6

test-suite test
  type: exitcode-stdio-1.0
  main-is: Main.hs
  default-language: Haskell2010
  hs-source-dirs:
    src/test

  other-modules:
    Test.FFTW
    Test.Gen

  build-depends:
    spl,
    base                       >= 4.9   && < 4.13,
    bytestring                 >= 0.9   && < 0.11,
    modular-arithmetic         >= 1.2.1.2 && < 1.3,
    libltdl                    >= 0.1.1.2 && < 0.2,
    mainland-pretty            >= 0.7   && < 0.8,
    process                    >= 1.4   && < 1.7,
    test-framework             >= 0.8   && < 0.9,
    test-framework-hunit       >= 0.3   && < 0.4,
    test-framework-quickcheck2 >= 0.3   && < 0.4,
    text                       >= 1.1   && < 1.3,
    transformers               >= 0.2   && < 0.6,
    vector                     >= 0.11  && < 0.13,
    vector-fftw                >= 0.1   && < 0.2,
    HUnit                      >= 1.3   && < 1.7,
    QuickCheck                 >= 2.8   && < 2.14

source-repository head
  type:     git
  location: https://lambda.cs.drexel.edu/gitlab/mainland/spl.git
